# rust_stack

./: .env.example  Cargo.toml
migrations/2023-10-13-233720_create_user/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
src/routes/web/: home.rs
templates/: index.html
