[package]
name = "rust_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
askama = "0.12.1"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "mysql" ] }
